--- a/src/components/product-create/styles.css
+++ b/src/components/product-create/styles.css
@@ -47,3 +47,9 @@ button:focus {
     border: 1px solid #ccc;
     border-radius: 10px;
 }
+
+@media (max-width: 768px) {
+    .add-product-container {
+        max-width: 80%;
+    }
+}
